# self-swe-machine

./: README.md  pyproject.toml
src/self_swe_machine/: __init__.py
